Fix: Planeshift nav button was working differently

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -69,7 +69,7 @@ nav #logo {
 
 	flex-direction: row;
 
-	background: #8FBCDB;
+	/*background: #8FBCDB;*/
 }
 
 nav .nav-button {
